Add react-dropzone dependency for file upload functionality

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-appwrite": "^17.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.57.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
